--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <h1 class="title multicolor-hover" >Maitri Patel</h1>
             <p class="sec_text_p2">developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2"onclick="window.open('./assets/resume-example.pdf')">
-                    Download CV
+                <button class="btn btn-color-2"onclick="location.href='./#about'">
+                    About Me
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
                     Contact Info
