--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <!--<a href= 'https://www.linkedin.com/in/maitri-patel-573927287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app '> <img src= "./assets/linkedin.png" height="100"></a> -->
 
                 <!-- THE ABOVE ANCHOR TAG IS ANOTHER EASY WAY TO LINK LINKED PROFILE -->
-                <img src="./assets/github.png" alt="my github profile" class="icon" onclick="location.href= 'https://github.com/codeWithMaitri' "> 
+                <img src="./assets/github.png" alt="my github profile" class="icon" onclick="location.href= 'https://github.com/Maitrify' "> 
 
             </div>
         </div>
